--- a/src/views/loginPage.fxml
+++ b/src/views/loginPage.fxml
@@ -2,34 +2,53 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+   prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="164.0" layoutY="182.0" prefHeight="39.0" prefWidth="572.0" text="HỆ THỐNG QUẢN LÝ HỒ SƠ ỨNG TUYỂN" textAlignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="53.0" text="MEET CV"
+         textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="413.0" layoutY="363.0" mnemonicParsing="false" text="Log in">
+      <Button fx:id="signinBtn" layoutX="282.0" layoutY="363.0" mnemonicParsing="false"
+         onAction="#login" prefHeight="39.0" prefWidth="362.0" text="Sign in">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Group layoutX="339.0" layoutY="311.0">
-         <children>
-            <Label layoutY="4.0" text="Password" />
-            <TextField layoutX="73.0" />
-         </children>
-      </Group>
       <Group layoutX="338.0" layoutY="275.0">
          <children>
             <Label layoutY="4.0" text="Username" />
-            <TextField layoutX="75.0" />
+            <TextField fx:id="usernameTxtField" layoutX="75.0" />
+         </children>
+      </Group>
+      <Label layoutX="351.0" layoutY="422.0" text="You are an employee ?" />
+      <Label layoutX="418.0" layoutY="170.0" text="SIGN IN">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="282.0" layoutY="205.0" text="Enter your credentials to access your account.">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Hyperlink fx:id="employeeHyperLink" layoutX="479.0" layoutY="419.0" text="Get hired now" />
+      <Label layoutX="332.0" layoutY="442.0" text="You are from a company ?" />
+      <Hyperlink fx:id="companyHyperlink" layoutX="479.0" layoutY="439.0" text="Create your account" />
+      <Group layoutX="338.0" layoutY="311.0">
+         <children>
+            <PasswordField fx:id="passwordTxtField" layoutX="73.0" />
+            <Label layoutY="4.0" text="Password" />
          </children>
       </Group>
    </children>
