--- a/src/views/companyHomePage.fxml
+++ b/src/views/companyHomePage.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+   prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="261.0" layoutY="192.0" text="company page" />
+      <Label layoutX="261.0" layoutY="192.0" text="Company page" />
    </children>
 </Pane>
