--- a/src/views/loginPage.fxml
+++ b/src/views/loginPage.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -9,47 +8,74 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<Pane
+   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="controllers.LoginController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="53.0" text="MEET CV"
          textAlignment="CENTER">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="48.0" />
          </font>
       </Label>
-      <Button fx:id="signinBtn" layoutX="282.0" layoutY="363.0" mnemonicParsing="false"
+      <Button fx:id="signinBtn" layoutX="774.0" layoutY="547.0" mnemonicParsing="false"
          onAction="#login" prefHeight="39.0" prefWidth="362.0" text="Sign in">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Button>
-      <Group layoutX="338.0" layoutY="275.0">
-         <children>
-            <Label layoutY="4.0" text="Username" />
-            <TextField fx:id="usernameTxtField" layoutX="75.0" />
-         </children>
-      </Group>
-      <Label layoutX="351.0" layoutY="422.0" text="You are an employee ?" />
-      <Label layoutX="418.0" layoutY="170.0" text="SIGN IN">
+      <Label layoutX="731.0" layoutY="648.0" text="You are an employee ?">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="282.0" layoutY="205.0" text="Enter your credentials to access your account.">
+      <Label layoutX="866.0" layoutY="161.0" text="SIGN IN">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="64.0" />
          </font>
       </Label>
-      <Hyperlink fx:id="employeeHyperLink" layoutX="479.0" layoutY="419.0" text="Get hired now" />
-      <Label layoutX="332.0" layoutY="442.0" text="You are from a company ?" />
-      <Hyperlink fx:id="companyHyperlink" layoutX="479.0" layoutY="439.0" text="Create your account" />
-      <Group layoutX="338.0" layoutY="311.0">
-         <children>
-            <PasswordField fx:id="passwordTxtField" layoutX="73.0" />
-            <Label layoutY="4.0" text="Password" />
-         </children>
-      </Group>
+      <Label layoutX="628.0" layoutY="260.0" text="Enter your credentials to access your account.">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Hyperlink fx:id="employeeHyperlink" layoutX="1039.0" layoutY="645.0" text="Get hired now">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Hyperlink>
+      <Label layoutX="673.0" layoutY="715.0" text="You are from a company ?">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Hyperlink fx:id="companyHyperlink" layoutX="1025.0" layoutY="707.0" onAction="#createComAcc"
+         text="Create your account">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Hyperlink>
+      <TextField fx:id="usernameTxtField" layoutX="936.0" layoutY="464.0"
+         promptText="Input your password">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
+      <PasswordField fx:id="passwordTxtField" layoutX="932.0" layoutY="361.0"
+         promptText="Input your username">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </PasswordField>
+      <Label layoutX="720.0" layoutY="460.0" text="Password">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="711.0" layoutY="372.0" text="Username">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
