--- a/src/views/createComPage.fxml
+++ b/src/views/createComPage.fxml
@@ -6,10 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignupController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignupController">
    <children>
       <Label layoutX="169.0" layoutY="49.0" text="Create company account">
          <font>
@@ -25,8 +22,13 @@
       <TextField fx:id="addressTxtField" layoutX="347.0" layoutY="116.0" />
       <TextField fx:id="taxNumTxtField" layoutX="103.0" layoutY="177.0" />
       <TextField fx:id="emailTxtField" layoutX="347.0" layoutY="176.0" />
-      <TextField fx:id="represent" layoutX="103.0" layoutY="239.0" />
-      <Button fx:id="createBtn" layoutX="208.0" layoutY="301.0" mnemonicParsing="false"
-         prefHeight="25.0" prefWidth="184.0" text="Create" />
+      <TextField fx:id="representativeTxtField" layoutX="103.0" layoutY="239.0" />
+      <Button fx:id="createBtn" layoutX="208.0" layoutY="348.0" mnemonicParsing="false" onAction="#createComAcc" prefHeight="25.0" prefWidth="184.0" text="Create" />
+      <TextField fx:id="phoneTxtField" layoutX="347.0" layoutY="239.0" />
+      <Label layoutX="348.0" layoutY="218.0" text="Phone number" />
+      <Label layoutX="103.0" layoutY="281.0" text="Password" />
+      <TextField fx:id="passwordTxtField" layoutX="103.0" layoutY="302.0" />
+      <Label layoutX="347.0" layoutY="281.0" text="Confirm password" />
+      <TextField fx:id="confirmPasswordTxtField" layoutX="347.0" layoutY="302.0" />
    </children>
 </Pane>
