--- a/src/views/loginPage.fxml
+++ b/src/views/loginPage.fxml
@@ -49,20 +49,21 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Hyperlink fx:id="companyHyperlink" layoutX="1025.0" layoutY="707.0" onAction="#createComAcc"
+      <Hyperlink fx:id="companyHyperlink" layoutX="1025.0" layoutY="707.0"
+         onAction="#showSignupPage"
          text="Create your account">
          <font>
             <Font size="24.0" />
          </font>
       </Hyperlink>
-      <TextField fx:id="usernameTxtField" layoutX="936.0" layoutY="464.0"
-         promptText="Input your password">
+      <TextField fx:id="usernameTxtField" layoutX="932.0" layoutY="361.0"
+         promptText="Input your username">
          <font>
             <Font size="24.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="passwordTxtField" layoutX="932.0" layoutY="361.0"
-         promptText="Input your username">
+      <PasswordField fx:id="passwordTxtField" layoutX="936.0" layoutY="464.0"
+         promptText="Input your password">
          <font>
             <Font size="24.0" />
          </font>
