--- a/src/views/createComPage.fxml
+++ b/src/views/createComPage.fxml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignupController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+   prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignupController">
    <children>
-      <Label layoutX="169.0" layoutY="49.0" text="Create company account">
+      <Label layoutX="835.0" layoutY="170.0" text="Create company account">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="103.0" layoutY="95.0" text="Company name" />
-      <Label layoutX="103.0" layoutY="155.0" text="Tax number" />
-      <Label layoutX="347.0" layoutY="94.0" text="Address" />
-      <Label layoutX="347.0" layoutY="154.0" text="Email" />
-      <Label layoutX="103.0" layoutY="218.0" text="Representatives" />
-      <TextField fx:id="comNameTxtField" layoutX="103.0" layoutY="117.0" />
-      <TextField fx:id="addressTxtField" layoutX="347.0" layoutY="116.0" />
-      <TextField fx:id="taxNumTxtField" layoutX="103.0" layoutY="177.0" />
-      <TextField fx:id="emailTxtField" layoutX="347.0" layoutY="176.0" />
-      <TextField fx:id="representativeTxtField" layoutX="103.0" layoutY="239.0" />
-      <Button fx:id="createBtn" layoutX="208.0" layoutY="348.0" mnemonicParsing="false" onAction="#createComAcc" prefHeight="25.0" prefWidth="184.0" text="Create" />
-      <TextField fx:id="phoneTxtField" layoutX="347.0" layoutY="239.0" />
-      <Label layoutX="348.0" layoutY="218.0" text="Phone number" />
-      <Label layoutX="103.0" layoutY="281.0" text="Password" />
-      <TextField fx:id="passwordTxtField" layoutX="103.0" layoutY="302.0" />
-      <Label layoutX="347.0" layoutY="281.0" text="Confirm password" />
-      <TextField fx:id="confirmPasswordTxtField" layoutX="347.0" layoutY="302.0" />
+      <Label layoutX="796.0" layoutY="223.0" text="Company name" />
+      <Label layoutX="796.0" layoutY="283.0" text="Tax number" />
+      <Label layoutX="1040.0" layoutY="222.0" text="Address" />
+      <Label layoutX="1040.0" layoutY="282.0" text="Email" />
+      <Label layoutX="796.0" layoutY="346.0" text="Representatives" />
+      <Label layoutX="1041.0" layoutY="346.0" text="Phone number" />
+      <Label layoutX="796.0" layoutY="409.0" text="Password" />
+      <Label layoutX="1040.0" layoutY="409.0" text="Confirm password" />
+      <TextField fx:id="comNameTxtField" layoutX="796.0" layoutY="245.0" />
+      <TextField fx:id="addressTxtField" layoutX="1040.0" layoutY="244.0" />
+      <TextField fx:id="taxNumTxtField" layoutX="796.0" layoutY="305.0" />
+      <TextField fx:id="emailTxtField" layoutX="1040.0" layoutY="304.0" />
+      <TextField fx:id="representativeTxtField" layoutX="796.0" layoutY="367.0" />
+      <TextField fx:id="phoneTxtField" layoutX="1040.0" layoutY="367.0" />
+      <TextField fx:id="passwordTxtField" layoutX="796.0" layoutY="430.0" />
+      <TextField fx:id="confirmPasswordTxtField" layoutX="1040.0" layoutY="430.0" />
+      <Button fx:id="createBtn" layoutX="901.0" layoutY="476.0" mnemonicParsing="false"
+         onAction="#createComAcc" prefHeight="25.0" prefWidth="184.0" text="Create" />
+      <Label layoutX="902.0" layoutY="530.0" text="Alredy has an account ?" />
+      <Hyperlink fx:id="loginPageHyperlink" layoutX="1040.0" layoutY="527.0" text="Log in"
+         onAction="#showLoginPage" />
    </children>
 </Pane>
