--- a/src/views/comHomePage.fxml
+++ b/src/views/comHomePage.fxml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
    prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
    xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="controllers.comProposalController" stylesheets="./styles.css">
+   fx:controller="controllers.comHomeController">
    <children>
       <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false"
          prefHeight="66.0" prefWidth="156.0" text="Home">
@@ -40,7 +38,7 @@
          </font>
       </Button>
       <Button fx:id="proposalBtn" layoutX="120.0" layoutY="830.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Proposal">
+         prefHeight="66.0" prefWidth="156.0" text="Proposal" onAction="#showProposalPage">
          <font>
             <Font size="24.0" />
          </font>
@@ -60,28 +58,11 @@
             <Insets />
          </opaqueInsets>
          <children>
-            <TableView layoutX="81.0" layoutY="196.0" prefHeight="846.0" prefWidth="1350.0">
-               <columns>
-                  <TableColumn prefWidth="200.0" text="Position" />
-                  <TableColumn minWidth="0.0" prefWidth="200.0" text="Quantity" />
-                  <TableColumn minWidth="0.0" prefWidth="200.0" text="Length" />
-                  <TableColumn minWidth="0.0" prefWidth="0.0" text="Column X" />
-                  <TableColumn minWidth="0.0" prefWidth="0.0" text="Column X" />
-                  <TableColumn prefWidth="200.0" text="Start date" />
-                  <TableColumn prefWidth="200.0" text="Advertising form" />
-               </columns>
-            </TableView>
-            <Label layoutX="78.0" layoutY="82.0" text="Your advertising proposal">
+            <Label layoutX="639.0" layoutY="494.0" text="This is homepage">
                <font>
-                  <Font size="36.0" />
+                  <Font size="48.0" />
                </font>
             </Label>
-            <JFXButton fx:id="addProposalBtn" layoutX="1183.0" layoutY="112.0"
-               text="ADD NEW PROPOSAL" onAction="#showAddProposalPage">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </JFXButton>
          </children>
       </AnchorPane>
    </children>
