--- a/src/views/comProposalPage.fxml
+++ b/src/views/comProposalPage.fxml
@@ -12,8 +12,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
    prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
-   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="controllers.comProposalController" stylesheets="./styles.css">
+   stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.comProposalController">
    <children>
       <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false"
          prefHeight="66.0" prefWidth="156.0" text="Home">
@@ -60,15 +60,15 @@
             <Insets />
          </opaqueInsets>
          <children>
-            <TableView layoutX="81.0" layoutY="196.0" prefHeight="846.0" prefWidth="1350.0">
+            <TableView fx:id="tableViewProposal" layoutX="81.0" layoutY="196.0" prefHeight="846.0"
+               prefWidth="1350.0">
                <columns>
-                  <TableColumn prefWidth="200.0" text="Position" />
-                  <TableColumn minWidth="0.0" prefWidth="200.0" text="Quantity" />
-                  <TableColumn minWidth="0.0" prefWidth="200.0" text="Length" />
-                  <TableColumn minWidth="0.0" prefWidth="0.0" text="Column X" />
-                  <TableColumn minWidth="0.0" prefWidth="0.0" text="Column X" />
-                  <TableColumn prefWidth="200.0" text="Start date" />
-                  <TableColumn prefWidth="200.0" text="Advertising form" />
+                  <TableColumn fx:id="posCol" prefWidth="200.0" text="Position" />
+                  <TableColumn fx:id="quantityCol" minWidth="0.0" prefWidth="200.0" text="Quantity" />
+                  <TableColumn fx:id="lengthCol" minWidth="0.0" prefWidth="200.0" text="Length" />
+                  <TableColumn fx:id="startDateCol" prefWidth="200.0" text="Start date" />
+                  <TableColumn fx:id="jdCol" prefWidth="200.0" text="Job description" />
+                  <TableColumn fx:id="adsFormCol" prefWidth="200.0" text="Advertising form" />
                </columns>
             </TableView>
             <Label layoutX="78.0" layoutY="82.0" text="Your advertising proposal">
@@ -77,7 +77,7 @@
                </font>
             </Label>
             <JFXButton fx:id="addProposalBtn" layoutX="1183.0" layoutY="112.0"
-               text="ADD NEW PROPOSAL" onAction="#showAddProposalPage">
+               onAction="#showAddProposalPage" text="ADD NEW PROPOSAL">
                <font>
                   <Font size="22.0" />
                </font>
