--- a/src/views/staffProposalPage.fxml
+++ b/src/views/staffProposalPage.fxml
@@ -3,14 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
    prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
-   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="controllers.staffHomeController">
+   stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.staffProposalController">
    <children>
       <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false"
          prefHeight="66.0" prefWidth="156.0" text="Home">
@@ -37,7 +39,7 @@
          </font>
       </Button>
       <Button fx:id="proposalBtn" layoutX="120.0" layoutY="830.0" mnemonicParsing="false"
-         onAction="#showProposalPage" prefHeight="66.0" prefWidth="156.0" text="Proposal">
+         prefHeight="66.0" prefWidth="156.0" text="Proposal">
          <font>
             <Font size="24.0" />
          </font>
@@ -57,9 +59,25 @@
             <Insets />
          </opaqueInsets>
          <children>
-            <Label layoutX="639.0" layoutY="494.0" text="This is staff homepage">
+            <TableView fx:id="tableViewProposal" layoutX="81.0" layoutY="196.0" prefHeight="846.0"
+               prefWidth="1350.0">
+               <columns>
+                  <TableColumn id="comCol" fx:id="comCol" prefWidth="154.0" text="Company" />
+                  <TableColumn id="posCol" fx:id="posCol" prefWidth="107.0" text="Position" />
+                  <TableColumn id="quanCol" fx:id="quantityCol" minWidth="0.0" prefWidth="117.0"
+                     text="Quantity" />
+                  <TableColumn id="lengthCol" fx:id="lengthCol" minWidth="0.0" prefWidth="98.0"
+                     text="Length" />
+                  <TableColumn id="startDateCol" fx:id="startDateCol" prefWidth="132.0"
+                     text="Start date" />
+                  <TableColumn id="jdCol" fx:id="jdCol" prefWidth="275.0" text="Job description" />
+                  <TableColumn fx:id="adsFormCol" prefWidth="238.0" text="Advertising form" />
+                  <TableColumn fx:id="actionCol" prefWidth="238.0" text="Action" />
+               </columns>
+            </TableView>
+            <Label layoutX="78.0" layoutY="82.0" text="Company advertising proposal">
                <font>
-                  <Font size="48.0" />
+                  <Font size="36.0" />
                </font>
             </Label>
          </children>
