--- a/src/views/loginPage.fxml
+++ b/src/views/loginPage.fxml
@@ -1,71 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
-   <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="53.0" text="MEET CV"
-         textAlignment="CENTER">
+<VBox alignment="CENTER" prefHeight="1080" prefWidth="1920" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="20" top="20" />
+      </padding>
+      <Label alignment="CENTER" prefHeight="60.0" prefWidth="500.0" text="MEET CV">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
       </Label>
-      <Button fx:id="signinBtn" layoutX="784.0" layoutY="543.0" mnemonicParsing="false"
-         onAction="#login" prefHeight="51.0" prefWidth="412.0" text="Sign in">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Label layoutX="758.0" layoutY="649.0" text="You are an employee ?">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="868.0" layoutY="169.0" text="SIGN IN">
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <Label alignment="CENTER" contentDisplay="CENTER" text="SIGN IN">
          <font>
             <Font name="System Bold" size="64.0" />
          </font>
       </Label>
-      <Label layoutX="628.0" layoutY="260.0" text="Enter your credentials to access your account.">
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <Label text="Enter your credentials to access your account.">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Hyperlink fx:id="employeeHyperlink" layoutX="1012.0" layoutY="647.0" text="Get hired now">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Hyperlink>
-      <Label layoutX="720.0" layoutY="709.0" text="You are from a company ?">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Hyperlink fx:id="companyHyperlink" layoutX="1014.0" layoutY="707.0"
-         onAction="#showSignupPage" text="Create your account">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Hyperlink>
-      <TextField fx:id="phoneTxtField" layoutX="784.0" layoutY="371.0" prefHeight="51.0"
-         prefWidth="415.0" promptText="Phone number">
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <TextField fx:id="phoneTxtField" prefHeight="51.0" prefWidth="415.0" promptText="Phone number">
          <font>
             <Font size="24.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="passwordTxtField" layoutX="784.0" layoutY="462.0" prefHeight="51.0"
-         prefWidth="415.0" promptText="Password">
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <PasswordField fx:id="passwordTxtField" prefHeight="51.0" prefWidth="415.0" promptText="Password">
          <font>
             <Font size="24.0" />
          </font>
       </PasswordField>
-   </children>
-</AnchorPane>
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <Button fx:id="signinBtn" mnemonicParsing="false" onAction="#login" prefHeight="51.0" prefWidth="412.0" text="Sign in">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <Label text="You are an employee ?">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Hyperlink fx:id="employeeHyperlink" text="Get hired now">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Hyperlink>
+   </HBox>
+   <HBox alignment="CENTER">
+      <padding>
+         <Insets bottom="10" top="10" />
+      </padding>
+      <Label text="You are from a company ?">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Hyperlink fx:id="companyHyperlink" onAction="#showSignupPage" text="Create your account">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Hyperlink>
+   </HBox>
+</VBox>
