--- a/src/views/comProposalPage.fxml
+++ b/src/views/comProposalPage.fxml
@@ -10,58 +10,45 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
-   stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.comProposalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;" stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.comProposalController">
    <children>
-      <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Home">
+      <Button fx:id="homeBtn" layoutX="80.0" layoutY="287.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Home">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="positionBtn" layoutX="120.0" layoutY="440.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Position">
+      <Button fx:id="positionBtn" layoutX="80.0" layoutY="417.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Position">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="employeeBtn" layoutX="120.0" layoutY="570.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Employee">
+      <Button fx:id="employeeBtn" layoutX="80.0" layoutY="547.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Employee">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="paymentBtn" layoutX="120.0" layoutY="700.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Payment">
+      <Button fx:id="paymentBtn" layoutX="80.0" layoutY="677.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Payment">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="proposalBtn" layoutX="120.0" layoutY="830.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Proposal">
+      <Button fx:id="proposalBtn" layoutX="80.0" layoutY="807.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Proposal">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="logoutBtn" layoutX="120.0" layoutY="960.0" mnemonicParsing="false"
-         onAction="#logout" prefHeight="66.0" prefWidth="156.0" text="Log out">
+      <Button fx:id="logoutBtn" layoutX="80.0" layoutY="960.0" mnemonicParsing="false" onAction="#logout" prefHeight="66.0" prefWidth="156.0" text="Log out">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <ImageView fx:id="avaImgView" fitHeight="150.0" fitWidth="200.0" layoutX="98.0" layoutY="80.0"
-         pickOnBounds="true" preserveRatio="true" />
-      <AnchorPane layoutX="377.0" layoutY="-6.0" prefHeight="1080.0" prefWidth="1522.0"
-         style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0"
-         AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="avaImgView" fitHeight="150.0" fitWidth="200.0" layoutX="98.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true" />
+      <AnchorPane layoutX="377.0" layoutY="-6.0" prefHeight="1080.0" prefWidth="1620.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <children>
-            <TableView fx:id="tableViewProposal" layoutX="81.0" layoutY="196.0" prefHeight="846.0"
-               prefWidth="1350.0">
+            <TableView fx:id="tableViewProposal" layoutX="81.0" layoutY="196.0" prefHeight="846.0" prefWidth="1490.0">
                <columns>
                   <TableColumn fx:id="posCol" prefWidth="200.0" text="Position" />
                   <TableColumn fx:id="quantityCol" minWidth="0.0" prefWidth="200.0" text="Quantity" />
@@ -70,6 +57,7 @@
                   <TableColumn fx:id="jdCol" prefWidth="200.0" text="Job description" />
                   <TableColumn fx:id="adsFormCol" prefWidth="200.0" text="Advertising form" />
                   <TableColumn fx:id="statusCol" prefWidth="149.0" text="Status" />
+                  <TableColumn fx:id="actionCol" prefWidth="149.0" text="Action" />
                </columns>
             </TableView>
             <Label layoutX="78.0" layoutY="82.0" text="Your advertising proposal">
@@ -77,8 +65,7 @@
                   <Font size="36.0" />
                </font>
             </Label>
-            <JFXButton fx:id="addProposalBtn" layoutX="1183.0" layoutY="112.0"
-               onAction="#showAddProposalPage" text="ADD NEW PROPOSAL">
+            <JFXButton fx:id="addProposalBtn" layoutX="1328.0" layoutY="112.0" onAction="#showAddProposalPage" text="ADD NEW PROPOSAL">
                <font>
                   <Font size="22.0" />
                </font>
