--- a/src/views/viewProposalPage.fxml
+++ b/src/views/viewProposalPage.fxml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+   prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css"
+   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="lengTxtField" layoutX="667.0" layoutY="89.0" text="Update advertising proposal">
+      <Label fx:id="lengTxtField" layoutX="667.0" layoutY="89.0" text="Your advertising information">
          <font>
             <Font size="41.0" />
          </font>
       </Label>
-      <JFXButton fx:id="saveBtn" layoutX="852.0" layoutY="822.0" onAction="#updateProposal" prefHeight="98.0" prefWidth="186.0" ripplerFill="RED" stylesheets="@../styles.css" text="Save">
+      <JFXButton fx:id="closeBtn" layoutX="852.0" layoutY="822.0"
+         prefHeight="98.0" prefWidth="186.0" ripplerFill="RED" stylesheets="@../styles.css"
+         text="Close" onAction="#closePage">
          <font>
             <Font size="35.0" />
          </font>
@@ -60,13 +62,22 @@
             <Font size="27.0" />
          </font>
       </Label>
-      <TextArea fx:id="jdTextArea" layoutX="1100.0" layoutY="580.0" prefHeight="200.0" prefWidth="322.0" />
+      <TextArea fx:id="jdTextArea" layoutX="1100.0" layoutY="580.0" prefHeight="200.0"
+         prefWidth="322.0" />
       <Label fx:id="posLabel" layoutX="457.0" layoutY="250.0" text="Label">
          <font>
             <Font name="System Bold" size="27.0" />
          </font>
       </Label>
-      <JFXComboBox fx:id="adFormCbb" layoutX="463.0" layoutY="580.0" />
-      <DatePicker fx:id="startDatePicker" layoutX="456.0" layoutY="372.0" />
+      <Label fx:id="startDateLabel" layoutX="457.0" layoutY="373.0" text="Label">
+         <font>
+            <Font name="System Bold" size="27.0" />
+         </font>
+      </Label>
+      <Label fx:id="adsFormLabel" layoutX="460.0" layoutY="567.0" text="Label">
+         <font>
+            <Font name="System Bold" size="27.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
