--- a/src/views/staffHomePage.fxml
+++ b/src/views/staffHomePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -24,12 +25,12 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="employeeBtn" layoutX="120.0" layoutY="570.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Employee">
+      <JFXButton fx:id="comPageBtn" layoutX="120.0" layoutY="570.0" mnemonicParsing="false"
+         prefHeight="66.0" prefWidth="156.0" text="Company" onAction="#showComPage">
          <font>
             <Font size="24.0" />
          </font>
-      </Button>
+      </JFXButton>
       <Button fx:id="paymentBtn" layoutX="120.0" layoutY="700.0" mnemonicParsing="false"
          prefHeight="66.0" prefWidth="156.0" text="Payment">
          <font>
