--- a/src/views/comHomePage.fxml
+++ b/src/views/comHomePage.fxml
@@ -7,9 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+   minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css"
    xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
    fx:controller="controllers.comHomeController">
    <children>
@@ -38,7 +37,7 @@
          </font>
       </Button>
       <Button fx:id="proposalBtn" layoutX="120.0" layoutY="830.0" mnemonicParsing="false"
-         prefHeight="66.0" prefWidth="156.0" text="Proposal" onAction="#showProposalPage">
+         onAction="#showProposalPage" prefHeight="66.0" prefWidth="156.0" text="Proposal">
          <font>
             <Font size="24.0" />
          </font>
