--- a/src/views/createProposalPage.fxml
+++ b/src/views/createProposalPage.fxml
@@ -6,25 +6,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css"
-   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="lengTxtField" layoutX="764.0" layoutY="118.0" text="Create advertising proposal">
+      <Label fx:id="lengTxtField" layoutX="773.0" layoutY="162.0" text="Create advertising proposal">
          <font>
             <Font size="41.0" />
          </font>
       </Label>
-      <TextField fx:id="posTxtField" layoutX="670.0" layoutY="218.0" prefHeight="80.0"
-         prefWidth="428.0" promptText="Position" />
-      <TextField fx:id="quanTxtField" layoutX="680.0" layoutY="342.0" promptText="Quantity" />
-      <TextField fx:id="lengthTxtField" layoutX="680.0" layoutY="444.0"
-         promptText="Advertising length" />
-      <TextField fx:id="jobDesTxtField" layoutX="680.0" layoutY="512.0" prefHeight="252.0"
-         prefWidth="426.0" promptText="Job description" />
-      <JFXButton fx:id="createBtn" layoutX="852.0" layoutY="822.0" prefHeight="98.0"
-         prefWidth="186.0" ripplerFill="RED" stylesheets="@../styles.css" text="Create"
-         onAction="#createProposal">
+      <TextField fx:id="posTxtField" layoutX="814.0" layoutY="267.0" prefHeight="45.0" prefWidth="430.0" promptText="Position" />
+      <TextField fx:id="quanTxtField" layoutX="814.0" layoutY="344.0" prefHeight="45.0" prefWidth="430.0" promptText="Quantity" />
+      <TextField fx:id="lengthTxtField" layoutX="814.0" layoutY="420.0" prefHeight="45.0" prefWidth="430.0" promptText="Advertising length" />
+      <TextField fx:id="jobDesTxtField" layoutX="814.0" layoutY="499.0" prefHeight="252.0" prefWidth="430.0" promptText="Job description" />
+      <JFXButton fx:id="createBtn" layoutX="945.0" layoutY="811.0" onAction="#createProposal" prefHeight="58.0" prefWidth="186.0" ripplerFill="RED" stylesheets="@../styles.css" text="Create">
          <font>
             <Font size="35.0" />
          </font>
