--- a/src/views/employeeHomePage.fxml
+++ b/src/views/employeeHomePage.fxml
@@ -7,7 +7,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
    prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1">
+   xmlns:fx="http://javafx.com/fxml/1" stylesheets="./styles.css">
    <children>
       <Label layoutX="640.0" layoutY="448.0" text="Employee page">
          <font>
