--- a/src/views/staffComPage.fxml
+++ b/src/views/staffComPage.fxml
@@ -10,35 +10,47 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.staffComPageController">
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+   minWidth="-Infinity"
+   prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css"
+   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="controllers.staffComPageController">
    <children>
-      <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Home">
+      <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false"
+         prefHeight="66.0" prefWidth="156.0" text="Home">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="positionBtn" layoutX="120.0" layoutY="440.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Position">
+      <Button fx:id="positionBtn" layoutX="120.0" layoutY="440.0" mnemonicParsing="false"
+         prefHeight="66.0" prefWidth="156.0" text="Position">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="paymentBtn" layoutX="120.0" layoutY="700.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="156.0" text="Payment">
+      <Button fx:id="paymentBtn" layoutX="120.0" layoutY="700.0" mnemonicParsing="false"
+         prefHeight="66.0" prefWidth="156.0" text="Payment">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="proposalBtn" layoutX="120.0" layoutY="830.0" mnemonicParsing="false" onAction="#showProposalPage" prefHeight="66.0" prefWidth="156.0" text="Proposal">
+      <Button fx:id="proposalBtn" layoutX="120.0" layoutY="830.0" mnemonicParsing="false"
+         onAction="#showProposalPage" prefHeight="66.0" prefWidth="156.0" text="Proposal">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="logoutBtn" layoutX="120.0" layoutY="960.0" mnemonicParsing="false" onAction="#logout" prefHeight="66.0" prefWidth="156.0" text="Log out">
+      <Button fx:id="logoutBtn" layoutX="120.0" layoutY="960.0" mnemonicParsing="false"
+         onAction="#logout" prefHeight="66.0" prefWidth="156.0" text="Log out">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <ImageView fx:id="avaImgView" fitHeight="150.0" fitWidth="200.0" layoutX="98.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true" />
-      <AnchorPane layoutX="377.0" layoutY="-6.0" prefHeight="1080.0" prefWidth="1522.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="avaImgView" fitHeight="150.0" fitWidth="200.0" layoutX="98.0" layoutY="80.0"
+         pickOnBounds="true" preserveRatio="true" />
+      <AnchorPane layoutX="377.0" layoutY="-6.0" prefHeight="1080.0" prefWidth="1522.0"
+         style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0"
+         AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -48,19 +60,23 @@
                   <Font size="36.0" />
                </font>
             </Label>
-            <TableView fx:id="comTableView" layoutX="118.0" layoutY="161.0" prefHeight="837.0" prefWidth="1341.0">
+            <TableView fx:id="comTableView" layoutX="118.0" layoutY="161.0" prefHeight="837.0"
+               prefWidth="1341.0">
                <columns>
                   <TableColumn fx:id="comCol" prefWidth="172.0" text="Company" />
-                  <TableColumn fx:id="emailCol" minWidth="9.66668701171875" prefWidth="338.0" text="Email" />
+                  <TableColumn fx:id="emailCol" minWidth="9.66668701171875" prefWidth="338.0"
+                     text="Email" />
                   <TableColumn fx:id="phoneCol" prefWidth="171.0" text="Phone" />
-                  <TableColumn fx:id="discountCol" prefWidth="143.99993896484375" text="Discount rate" />
+                  <TableColumn fx:id="discountCol" prefWidth="143.99993896484375"
+                     text="Discount rate" />
                   <TableColumn fx:id="desCol" prefWidth="383.6666259765625" text="Description" />
                   <TableColumn fx:id="actionCol" prefWidth="131.0" text="Action" />
                </columns>
             </TableView>
          </children>
       </AnchorPane>
-      <JFXButton fx:id="comPageBtn" layoutX="120.0" layoutY="568.0" prefHeight="66.0" prefWidth="156.0" text="Company">
+      <JFXButton fx:id="comPageBtn" layoutX="120.0" layoutY="568.0" prefHeight="66.0"
+         prefWidth="156.0" text="Company">
          <font>
             <Font size="24.0" />
          </font>
