--- a/src/views/staffHomePage.fxml
+++ b/src/views/staffHomePage.fxml
@@ -8,10 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+   minWidth="-Infinity"
+   prefHeight="1080.0" prefWidth="1920.0"
    xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="controllers.staffHomeController">
+   fx:controller="controllers.staffHomeController" stylesheets="./styles.css">
    <children>
       <Button fx:id="homeBtn" layoutX="120.0" layoutY="310.0" mnemonicParsing="false"
          prefHeight="66.0" prefWidth="156.0" text="Home">
