--- a/src/views/staffProposalPage.fxml
+++ b/src/views/staffProposalPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-   prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: yellow;"
+   prefHeight="1080.0" prefWidth="1920.0"
    stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21"
    xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.staffProposalController">
    <children>
