--- a/src/views/updateComPage.fxml
+++ b/src/views/updateComPage.fxml
@@ -9,7 +9,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
    prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.updateComController">
+   xmlns:fx="http://javafx.com/fxml/1"
+   stylesheets="./styles.css">
    <children>
       <JFXButton layoutX="67.0" layoutY="46.0" prefHeight="83.0" prefWidth="162.0" text="Back">
          <font>
