--- a/src/views/updateProposalPage.fxml
+++ b/src/views/updateProposalPage.fxml
@@ -8,14 +8,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+   prefHeight="1080.0" prefWidth="1920.0" stylesheets="./styles.css"
+   xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="lengTxtField" layoutX="667.0" layoutY="89.0" text="Update advertising proposal">
          <font>
             <Font size="41.0" />
          </font>
       </Label>
-      <JFXButton fx:id="saveBtn" layoutX="852.0" layoutY="822.0" onAction="#updateProposal" prefHeight="98.0" prefWidth="186.0" ripplerFill="RED" stylesheets="@../styles.css" text="Save">
+      <JFXButton fx:id="saveBtn" layoutX="852.0" layoutY="822.0" onAction="#updateProposal"
+         prefHeight="98.0" prefWidth="186.0" ripplerFill="RED" stylesheets="@../styles.css"
+         text="Save">
          <font>
             <Font size="35.0" />
          </font>
@@ -60,7 +64,8 @@
             <Font size="27.0" />
          </font>
       </Label>
-      <TextArea fx:id="jdTextArea" layoutX="1100.0" layoutY="580.0" prefHeight="200.0" prefWidth="322.0" />
+      <TextArea fx:id="jdTextArea" layoutX="1100.0" layoutY="580.0" prefHeight="200.0"
+         prefWidth="322.0" />
       <Label fx:id="posLabel" layoutX="457.0" layoutY="250.0" text="Label">
          <font>
             <Font name="System Bold" size="27.0" />
